--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react-native": "0.60.4",
     "react-native-easy-grid": "^0.2.1",
     "react-native-html-to-pdf": "^0.8.0",
+    "react-native-image-picker": "^1.0.2",
     "react-native-material-ui": "^1.30.1",
     "react-native-router-flux": "^4.0.6",
+    "react-native-scalable-image": "^1.0.0",
     "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
