embed inputs into PDF template with instance vaule
the current pdf template is inspection report

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -189,6 +189,10 @@ android {
         pickFirst '**/x86/libjsc.so'
         pickFirst '**/armeabi-v7a/libjsc.so'
     }
+
+    dexOptions {
+      jumboMode = true
+    }
 }
 
 dependencies {
