--- a/ios/ReportSMS/Info.plist
+++ b/ios/ReportSMS/Info.plist
@@ -74,6 +74,7 @@
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
 		<string>Fontisto.ttf</string>
+		<string>Times New Roman.ttf</string>
 	</array>
 </dict>
 </plist>
