--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react-native-html-to-pdf": "^0.8.0",
     "react-native-image-picker": "^1.0.2",
     "react-native-material-ui": "^1.30.1",
+    "react-native-pdf": "^5.1.4",
     "react-native-pdf-lib": "^0.2.1",
     "react-native-router-flux": "^4.0.6",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-vector-icons": "^6.6.0",
+    "rn-fetch-blob": "^0.10.16"
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
