--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -189,12 +189,12 @@ android {
         pickFirst '**/x86/libjsc.so'
         pickFirst '**/armeabi-v7a/libjsc.so'
         
-        pickFirst 'lib/x86/libc++_shared.so'
-        pickFirst 'lib/x86_64/libjsc.so'
-        pickFirst 'lib/arm64-v8a/libjsc.so'
-        pickFirst 'lib/arm64-v8a/libc++_shared.so'
-        pickFirst 'lib/x86_64/libc++_shared.so'
-        pickFirst 'lib/armeabi-v7a/libc++_shared.so'
+        // pickFirst 'lib/x86/libc++_shared.so'
+        // pickFirst 'lib/x86_64/libjsc.so'
+        // pickFirst 'lib/arm64-v8a/libjsc.so'
+        // pickFirst 'lib/arm64-v8a/libc++_shared.so'
+        // pickFirst 'lib/x86_64/libc++_shared.so'
+        // pickFirst 'lib/armeabi-v7a/libc++_shared.so'
     }
 
     dexOptions {
@@ -213,6 +213,8 @@ dependencies {
     } else {
       implementation jscFlavor
     }
+
+    
 }
 
 // Run this once to be able to run the application with BUCK
