--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.1",
     "native-base": "^2.13.4",
     "react": "16.8.6",
     "react-native": "0.60.4",
-    "react-native-easy-grid": "^0.2.1",
-    "react-native-html-to-pdf": "^0.8.0",
+    "react-native-dialog-input": "^1.0.7",
     "react-native-image-picker": "^1.0.2",
+    "react-native-mail": "^4.0.0",
     "react-native-material-ui": "^1.30.1",
     "react-native-pdf": "^5.1.4",
     "react-native-pdf-lib": "^0.2.1",
