--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "dateformat": "^3.0.3",
     "fb-watchman": "^2.0.0",
     "native-base": "^2.13.4",
     "react": "16.8.6",
