Initial lib change (#30)

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -194,6 +194,10 @@ android {
     dexOptions {
       jumboMode = true
     }
+
+    aaptOptions {
+        noCompress "pdf", "ttf"
+    }
 }
 
 dependencies {
