--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@pdf-lib/fontkit": "0.0.4",
     "dateformat": "^3.0.3",
     "fb-watchman": "^2.0.0",
     "native-base": "^2.13.4",
+    "pdf-lib": "^1.1.1",
     "react": "16.8.6",
     "react-native": "0.60.4",
     "react-native-dialog-input": "^1.0.7",
@@ -23,7 +25,6 @@
     "react-native-mail": "^4.0.0",
     "react-native-material-ui": "^1.30.1",
     "react-native-pdf": "^5.1.4",
-    "react-native-pdf-lib": "^0.2.1",
     "react-native-router-flux": "^4.0.6",
     "react-native-vector-icons": "^6.6.0",
     "rn-fetch-blob": "^0.10.16"
