Default debug key (#33)

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "run-android": "react-native run-android",
     "ra": "react-native run-android",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "keygen": "keytool -genkey -v -keystore debug.keystore -storepass android -alias androiddebugkey -keypass android -keyalg RSA -keysize 2048 -validity 10000"
   },
   "dependencies": {
     "@pdf-lib/fontkit": "0.0.4",
