--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "react": "16.8.6",
     "react-native": "0.60.4",
     "react-native-dialog-input": "^1.0.7",
+    "react-native-gesture-handler": "^1.4.1",
     "react-native-image-picker": "^1.0.2",
     "react-native-mail": "^4.0.0",
     "react-native-material-ui": "^1.30.1",
     "react-native-pdf": "^5.1.4",
+    "react-native-reanimated": "^1.3.0",
     "react-native-router-flux": "^4.0.6",
+    "react-native-tab-view": "^2.10.0",
     "react-native-vector-icons": "^6.6.0",
     "rn-fetch-blob": "^0.10.16"
   },
