--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -212,7 +212,7 @@ dependencies {
       implementation jscFlavor
     }
 
-    
+    compile project(':react-native-share')
 }
 
 // Run this once to be able to run the application with BUCK
