Improve loading management (#45)
* Refactor out tab switching

* Implement loading screen

* Resolve refresh issue

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "16.8.6",
     "react-native": "0.60.4",
     "react-native-dialog-input": "^1.0.7",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-image-picker": "^1.0.2",
     "react-native-material-ui": "^1.30.1",
