--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-pdf": "^5.1.4",
     "react-native-reanimated": "^1.3.0",
     "react-native-router-flux": "^4.0.6",
+    "react-native-screens": "^2.0.0-beta.8",
     "react-native-share": "^2.0.0",
     "react-native-tab-view": "^2.10.0",
     "react-native-vector-icons": "^6.6.0",
