--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-router-flux": "^4.0.6",
     "react-native-screens": "^2.0.0-beta.8",
     "react-native-share": "^2.0.0",
+    "react-native-signature-capture": "^0.4.10",
     "react-native-tab-view": "^2.10.0",
     "react-native-vector-icons": "^6.6.0",
     "rn-fetch-blob": "^0.10.16"
