--- a/ios/ReportSMS/Info.plist
+++ b/ios/ReportSMS/Info.plist
@@ -55,26 +55,32 @@
 	<false/>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Roboto_medium.ttf</string>
-		<string>Roboto.ttf</string>
-		<string>rubicon-icon-font.ttf</string>
+		<string>Times New Roman.ttf</string>
 		<string>AntDesign.ttf</string>
 		<string>Entypo.ttf</string>
 		<string>EvilIcons.ttf</string>
 		<string>Feather.ttf</string>
 		<string>FontAwesome.ttf</string>
 		<string>FontAwesome5_Brands.ttf</string>
-		<string>FontAwesome5_Regular.ttf</string>
 		<string>FontAwesome5_Solid.ttf</string>
-		<string>Foundation.ttf</string>
+		<string>Fontisto.ttf</string>
 		<string>Ionicons.ttf</string>
-		<string>MaterialCommunityIcons.ttf</string>
 		<string>MaterialIcons.ttf</string>
 		<string>Octicons.ttf</string>
-		<string>SimpleLineIcons.ttf</string>
+		<string>Roboto_medium.ttf</string>
+		<string>Roboto.ttf</string>
+		<string>rubicon-icon-font.ttf</string>
 		<string>Zocial.ttf</string>
-		<string>Fontisto.ttf</string>
-		<string>Times New Roman.ttf</string>
+		<string>FontAwesome5_Regular.ttf</string>
+		<string>Foundation.ttf</string>
+		<string>MaterialCommunityIcons.ttf</string>
+		<string>SimpleLineIcons.ttf</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+    <string>$(PRODUCT_NAME) accesses your photo gallery to insert into documentaion</string>
+    <key>NSCameraUsageDescription</key>
+    <string>$(PRODUCT_NAME) accesses your camera to insert into documentaion</string>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>$(PRODUCT_NAME) saves photos to your photo gallery to insert into documentaion</string>
 </dict>
 </plist>
