--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pdf-lib": "^1.1.1",
     "react": "16.8.6",
     "react-native": "0.60.4",
+    "react-native-camera": "^3.19.1",
     "react-native-collapsible": "^1.5.1",
     "react-native-dialog-input": "^1.0.7",
     "react-native-elements": "^1.2.7",
