--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-native-camera": "^3.19.1",
     "react-native-collapsible": "^1.5.1",
     "react-native-dialog-input": "^1.0.7",
+    "react-native-document-picker": "^3.3.2",
     "react-native-elements": "^1.2.7",
+    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-image-picker": "^1.0.2",
     "react-native-material-ui": "^1.30.1",
@@ -39,7 +41,8 @@
     "react-native-tab-view": "^2.10.0",
     "react-native-vector-icons": "^6.6.0",
     "rn-fetch-blob": "^0.10.16",
-    "selectn": "^1.1.2"
+    "selectn": "^1.1.2",
+    "xlsx": "^0.15.6"
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
