--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-image-picker": "^1.0.2",
+    "react-native-image-resizer": "^1.2.1",
     "react-native-material-ui": "^1.30.1",
     "react-native-pdf": "^5.1.4",
     "react-native-reanimated": "^1.3.0",
@@ -40,6 +41,7 @@
     "react-native-signature-capture": "^0.4.10",
     "react-native-tab-view": "^2.10.0",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-zip-archive": "^5.0.2",
     "rn-fetch-blob": "^0.10.16",
     "selectn": "^1.1.2",
     "xlsx": "^0.15.6"
