--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-image-resizer": "^1.2.1",
     "react-native-material-ui": "^1.30.1",
     "react-native-pdf": "^5.1.4",
+    "react-native-progress": "^4.1.2",
     "react-native-reanimated": "^1.3.0",
     "react-native-router-flux": "^4.0.6",
     "react-native-screens": "^2.0.0-beta.8",
